--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,13 @@ services:
       - "${API_HOST_PORT}:${API_CONTAINER_PORT}"
     environment:
       - API_CONTAINER_PORT=${API_CONTAINER_PORT}
+      - DB_CONTAINER_PORT=${DB_CONTAINER_PORT}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - DB_NAME=${DB_NAME}
+    depends_on:
+      db:
+        condition: service_healthy
   db:
     container_name: db
     image: postgres:latest
@@ -21,6 +28,11 @@ services:
       - POSTGRES_USER=${POSTGRES_USER} 
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${DB_NAME}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${DB_NAME}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
   flyway:
     container_name: flyway
     image: flyway/flyway:latest
