--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       - REDIS_PASSWORD=${REDIS_PASSWORD}
       - REDIS_HOST_PORT=${REDIS_HOST_PORT}
     depends_on:
+      redis:
+        condition: service_started
       db:
         condition: service_healthy
   db:
@@ -36,8 +38,6 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-    depends_on:
-      - redis
   redis:
     container_name: redis
     image: redis:latest
