--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build: ./frontend
     ports:
       - "3000:3000"
+    environment:
+      - ENROLL_TRACKER_RSA_PUBLIC_KEY=${ENROLL_TRACKER_RSA_PUBLIC_KEY}
   api:
     container_name: api
     build: ./backend
@@ -15,6 +17,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - DB_NAME=${DB_NAME}
+      - ENROLL_TRACKER_RSA_PUBLIC_KEY=${ENROLL_TRACKER_RSA_PUBLIC_KEY}
       - ENROLL_TRACKER_RSA_PRIVATE_KEY=${ENROLL_TRACKER_RSA_PRIVATE_KEY}
       - REDIS_PASSWORD=${REDIS_PASSWORD}
       - REDIS_HOST_PORT=${REDIS_HOST_PORT}
