--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "eslint-config-prettier": "^9.1.0",
+    "jose": "^5.9.4",
     "prettier": "^3.3.3",
     "typescript": "^5"
   }
