--- a/.github/workflows/frontend-check.yaml
+++ b/.github/workflows/frontend-check.yaml
@@ -22,7 +22,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+        working-directory: ./frontend
       - name: Install dependencies
         run: npm ci
+        working-directory: ./frontend
       - name: Run Prettier
         run: npm run prettier:check
+        working-directory: ./frontend
