--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "eslint-config-prettier": "^9.1.0",
     "jose": "^5.9.4",
     "prettier": "^3.3.3",
+    "react-select": "^5.8.3",
     "typescript": "^5"
   }
 }
